estateownerdeshbroad and gardenmanagerdeshboard SceneSwitcher done, binfile estateowner